# mozilla-vpn-client

./: .gitignore  out.txt
.github/workflows/: test_unit.yaml
linux/: mozillavpn.spec
scripts/linux/: script.sh
scripts/macos/: apple_compile.sh
scripts/macos/utils/: xcode_patcher.rb
src/: mozillavpn.cpp
src/apps/vpn/tasks/createsupportticket/: taskcreatesupportticket.cpp
src/cmake/: sources.cmake  vpnglean.cmake
src/glean/: extern.h  glean.cpp  metrictypes.h
src/glean/private/: event.cpp  event.h
src/ui/settings/: ViewSettingsMenu.qml
src/websocket/: websockethandler.cpp
tests/unit/: CMakeLists.txt  main.cpp  testtasks.cpp  testtasks.h
tests/unit/websocket/: testwebsockethandler.cpp
tools/ipmonitor/: main.cpp
vpnglean/: CMakeLists.txt  Cargo.toml  cbindgen.toml  metrics.yaml  pings.yaml
vpnglean/glean_parser_ext/: cpp.py  requirements.txt  run_glean_parser.py  rust.py
vpnglean/glean_parser_ext/templates/: cpp.jinja2  cpp_pings.jinja2  rust.jinja2  rust_pings.jinja2
vpnglean/src/: lib.rs  metrics.rs  uploader.rs
vpnglean/src/cpp/: counter.cpp
vpnglean/src/ffi/: event.rs  macros.rs  mod.rs  ping.rs
